--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "'vandelay.com' + # 'www.vandelay.com'"
+    "\"ww'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
